<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CreateAlbumFragment"
    android:background="@color/vinyls_black">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:rotationX="0">

        <!-- Label principal -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visitor_label"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <!-- Boton de artistas -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="60dp">

                <ImageView
                    android:id="@+id/go_to_performers"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/albumes"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_bar_performers"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Boton de coleccionistas -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/go_to_collectors"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/albumes"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_bar_collectors"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <!-- Boton de albumes -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/go_to_album"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/albumes"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_albums"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>