<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ListAlbumsFragment"
    android:background="@color/vinyls_black">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:rotationX="0">

        <!-- Label principal -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.uniandes.vinyls.ui.components.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_albums_label"
                android:textSize="33sp"
                android:layout_marginBottom="20dp"/>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:alpha="0.5"
                android:layout_marginBottom="20dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Campo de busqueda -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search_bar_background"
                android:hint="Buscar álbumes..."
                android:layout_marginBottom="20dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Botones de ordenamiento -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/order_genre_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/musical_genre"
                android:background="@color/black"
                android:textColor="@color/white" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/order_name_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_name_label"
                android:background="@drawable/rounded_button" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/order_artist_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_artists"
                android:background="@color/black"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Item de la lista 1 -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/album_cover1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/pruebaicono" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/album_name1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Album Name"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/album_genre1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Genre"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:alpha="0.5"
                android:background="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Item de la lista 1 -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/album_cover2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/pruebaicono" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/album_name2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Album Name"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/album_genre2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Genre"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:alpha="0.5"
                android:background="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Botón de agregar álbum -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_album"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/rounded_button"
                android:text="+"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/text_button_add_album"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingLeft="10dp"
                android:text="@string/add_album"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>