<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ListAlbumsFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingTop="20sp">
        <!-- App Bar Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <!-- App Bar Layout -->
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                        <TextView
                            android:id="@+id/detail_collector_name"
                            android:layout_width="match_parent"
                            android:layout_height="200sp"
                            android:textSize="40sp"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            >
                        </TextView>
                        <com.uniandes.vinyls.ui.components.CustomTextView
                            android:id="@+id/detail_collector_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center">
                        </com.uniandes.vinyls.ui.components.CustomTextView>
                        <TextView
                            android:id="@+id/detail_collector_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/white">
                        </TextView>
                    </LinearLayout>
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:alpha="0.5"
                android:background="@color/white" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Recycler Artistas -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.uniandes.vinyls.ui.components.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10sp"
                        android:layout_marginTop="20sp"
                        android:text="@string/menu_artists"/>

                    <ProgressBar
                        android:id="@+id/loadingArtistsProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/emptyDataArtistsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_records_display"
                        android:textSize="18sp"
                        android:textColor="@color/vinyls_text_color"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_collector_artist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp"/>
                </LinearLayout>

                <!-- Recycler albumes -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.uniandes.vinyls.ui.components.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10sp"
                        android:layout_marginTop="20sp"
                        android:text="@string/menu_albums"/>

                    <ProgressBar
                        android:id="@+id/loadingAlbumsProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/emptyDataAlbumsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_records_display"
                        android:textSize="18sp"
                        android:textColor="@color/vinyls_text_color"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_collector_album"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>